// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`svg.ts Path commands parameter and getCommandString Normal 1`] = `
Array [
  Command {
    "type": "M",
    "value": Array [
      0,
      0,
    ],
  },
  Command {
    "type": "L",
    "value": Array [
      1,
      1,
    ],
  },
  Command {
    "type": "L",
    "value": Array [
      -1,
      -1,
    ],
  },
]
`;

exports[`svg.ts Path commands parameter and getCommandString Normal 2`] = `"M 0 0 L 1 1 L -1 -1"`;

exports[`svg.ts Path toJson and toElement toElement 1`] = `
<path
  d="M 0 0 L 1 1 L 2 1 L 3 0"
  fill="none"
  stroke="#000"
  stroke-linecap="round"
  stroke-linejoin="round"
  stroke-width="1"
/>
`;

exports[`svg.ts Path toJson and toElement toJson 1`] = `
Object {
  "d": "M 0 0 L 1 1 L 2 1 L 3 0",
  "fill": "none",
  "stroke": "#000",
  "strokeLinecap": "round",
  "strokeLinejoin": "round",
  "strokeWidth": "1",
}
`;

exports[`svg.ts Svg parseSVGElement 1`] = `
Svg {
  "height": 400,
  "paths": Array [
    Path {
      "attrs": Object {
        "fill": "#f00",
        "stroke": "#00f",
        "strokeLinecap": "round",
        "strokeLinejoin": "round",
        "strokeWidth": "8",
      },
      "commands": Array [
        Command {
          "type": "M",
          "value": Array [
            2,
            2,
          ],
        },
        Command {
          "type": "L",
          "value": Array [
            4,
            4,
          ],
        },
        Command {
          "type": "C",
          "value": Array [
            6,
            6,
            10,
            6,
            14,
            6,
          ],
        },
        Command {
          "type": "Z",
          "value": Array [],
        },
      ],
    },
  ],
  "width": 400,
}
`;

exports[`svg.ts Svg parseSVGString 1`] = `
Svg {
  "height": 400,
  "paths": Array [
    Path {
      "attrs": Object {
        "fill": "#f00",
        "stroke": "#00f",
        "strokeLinecap": "round",
        "strokeLinejoin": "round",
        "strokeWidth": "8",
      },
      "commands": Array [
        Command {
          "type": "M",
          "value": Array [
            2,
            2,
          ],
        },
        Command {
          "type": "L",
          "value": Array [
            4,
            4,
          ],
        },
        Command {
          "type": "C",
          "value": Array [
            6,
            6,
            10,
            6,
            14,
            6,
          ],
        },
        Command {
          "type": "Z",
          "value": Array [],
        },
      ],
    },
  ],
  "width": 400,
}
`;

exports[`svg.ts Svg toBase64 1`] = `"data:image/svg+xml;base64,PHN2ZyB2ZXJzaW9uPSIxLjEiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgeG1sbnM6eGxpbms9Imh0dHA6Ly93d3cudzMub3JnLzE5OTkveGxpbmsiIGhlaWdodD0iNTAwIiB3aWR0aD0iNTAwIj48cGF0aCBkPSJNIDAgMCBDIDAuMiAwLjIgMC42IDAuOCAxIDEgQyAxLjQgMS4yIDEuNiAxLjIgMiAxIEMgMi40IDAuOCAyLjggMC4yIDMgMCIgZmlsbD0ibm9uZSIgc3Ryb2tlPSIjMDAwIiBzdHJva2UtbGluZWNhcD0icm91bmQiIHN0cm9rZS1saW5lam9pbj0icm91bmQiIHN0cm9rZS13aWR0aD0iMSI+PC9wYXRoPjxwYXRoIGQ9Ik0gNCA0IEwgOSA0IEwgOSA4IEwgMyAwIFoiIGZpbGw9Im5vbmUiIHN0cm9rZT0iIzAwMCIgc3Ryb2tlLWxpbmVjYXA9InNxdWFyZSIgc3Ryb2tlLWxpbmVqb2luPSJtaXR0ZXIiIHN0cm9rZS13aWR0aD0iMSI+PC9wYXRoPjwvc3ZnPg=="`;

exports[`svg.ts Svg toElement 1`] = `
<svg
  height="500"
  version="1.1"
  width="500"
  xmlns="http://www.w3.org/2000/svg"
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <path
    d="M 0 0 C 0.2 0.2 0.6 0.8 1 1 C 1.4 1.2 1.6 1.2 2 1 C 2.4 0.8 2.8 0.2 3 0"
    fill="none"
    stroke="#000"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1"
  />
  <path
    d="M 4 4 L 9 4 L 9 8 L 3 0 Z"
    fill="none"
    stroke="#000"
    stroke-linecap="square"
    stroke-linejoin="mitter"
    stroke-width="1"
  />
</svg>
`;

exports[`svg.ts Svg toJson 1`] = `
Object {
  "height": 500,
  "paths": Array [
    Object {
      "d": "M 0 0 C 0.2 0.2 0.6 0.8 1 1 C 1.4 1.2 1.6 1.2 2 1 C 2.4 0.8 2.8 0.2 3 0",
      "fill": "none",
      "stroke": "#000",
      "strokeLinecap": "round",
      "strokeLinejoin": "round",
      "strokeWidth": "1",
    },
    Object {
      "d": "M 4 4 L 9 4 L 9 8 L 3 0 Z",
      "fill": "none",
      "stroke": "#000",
      "strokeLinecap": "square",
      "strokeLinejoin": "mitter",
      "strokeWidth": "1",
    },
  ],
  "width": 500,
}
`;
